fix for footer not showing

--- a/rails/public/stylesheets/screen.css
+++ b/rails/public/stylesheets/screen.css
@@ -186,11 +186,13 @@ body > header{
     }
 
 body > footer{
-    margin: 0 auto 20px;
-    width: 90%;
+    color: #CCC;
     font-size: 10px;
     line-height: 1;
-    color: #CCC;
+    margin: 0 auto 20px;
+    position: relative;
+    width: 90%;
+    z-index: 1000;
 }
 body > footer a{
     color: #ff9797;
